--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "gomunch",
   "version": "0.1.0",
@@ -7,9 +8,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase-tools": "^8.13.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3"
+  },
+  "engines": {
+    "node": "8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,4 +39,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
